// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseListItem with expense 1`] = `
<div>
  <[object Object]
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </[object Object]>
  <p>
    $1.95
    -
    December 31st, 1969
  </p>
  <p>
    0
  </p>
</div>
`;

exports[`should render ExpenseListItem with no expense 1`] = `
<div>
  <[object Object]
    to="/edit/undefined"
  >
    <h3 />
  </[object Object]>
  <p>
    $0.00
    -
    December 31st, 1969
  </p>
  <p />
</div>
`;
